[gd_scene load_steps=7 format=2]

[ext_resource path="res://default.theme" type="Theme" id=1]
[ext_resource path="res://elements/PlayListsEditor.gd" type="Script" id=2]
[ext_resource path="res://menu.tres" type="StyleBox" id=3]
[ext_resource path="res://Img/window-maximize-symbolic.svg" type="Texture2D" id=4]
[ext_resource path="res://elements/OpenSeed.tscn" type="PackedScene" id=5]
[ext_resource path="res://elements/Thicket.tscn" type="PackedScene" id=6]

[node name="PlayListsEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
dragger_visibility = 2

[node name="Lists" type="Panel" parent="HSplitContainer"]
offset_right = 400.0
offset_bottom = 720.0
custom_minimum_size = Vector2( 400, 0 )
theme_override_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Lists"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="HSplitContainer/Lists/VBoxContainer"]
editor/display_folded = true
offset_right = 400.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="HSplitContainer/Lists/VBoxContainer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.00003
offset_top = -7.0
offset_right = 66.0
offset_bottom = 7.0
text = "Play Lists"
uppercase = true

[node name="new_list" type="Button" parent="HSplitContainer/Lists/VBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -9.0
offset_right = -3.0
offset_bottom = 13.0
icon = ExtResource( 4 )
flat = true

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/Lists/VBoxContainer"]
offset_top = 36.0
offset_right = 400.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Lists"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
offset_right = -5.0
offset_bottom = -5.0
scroll_horizontal_enabled = false

[node name="PlayListList" type="VBoxContainer" parent="HSplitContainer/Lists/ScrollContainer"]

[node name="Tracks" type="Panel" parent="HSplitContainer"]
offset_left = 400.0
offset_right = 1325.0
offset_bottom = 720.0
custom_minimum_size = Vector2( 400, 0 )

[node name="ListView" type="VBoxContainer" parent="HSplitContainer/Tracks"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Tracks/ListView"]
offset_right = 950.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Tracks/ListView/ScrollContainer"]

[node name="newListName" type="LineEdit" parent="HSplitContainer/Tracks"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_right = 127.5
offset_bottom = 24.0
custom_minimum_size = Vector2( 255, 0 )
max_length = 50
placeholder_text = "New List"

[node name="Label" type="Label" parent="HSplitContainer/Tracks/newListName"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.6342
offset_top = -27.2879
offset_right = 18.3658
offset_bottom = -13.2879
text = "New List"

[node name="cancel" type="Button" parent="HSplitContainer/Tracks/newListName"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 18.0
offset_right = 54.0
offset_bottom = 38.0
text = "Cancel"

[node name="create" type="Button" parent="HSplitContainer/Tracks/newListName"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = 18.0
offset_bottom = 38.0
text = "Create"

[node name="OpenSeed" parent="." instance=ExtResource( 5 )]

[node name="Thicket" parent="." instance=ExtResource( 6 )]
[connection signal="visibility_changed" from="." to="." method="_on_PlayListsEditor_visibility_changed"]
[connection signal="pressed" from="HSplitContainer/Lists/VBoxContainer/Control/new_list" to="." method="_on_new_list_pressed"]
[connection signal="pressed" from="HSplitContainer/Tracks/newListName/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HSplitContainer/Tracks/newListName/create" to="." method="_on_create_pressed"]
